# solana-tax-reward

./: .gitignore  Anchor.toml  Cargo.toml  README.md  WARP.md
.github/workflows/: ci.yml  deploy.yml
clients/batch-service/: package.json
clients/batch-service/src/: index.js
clients/batch-service/tests/: e2e.test.js
clients/dapp/: cypress.json  package-lock.json  package.json
clients/dapp/cypress/integration/: swap.spec.ts
clients/dapp/src/app/api/metrics/: route.ts
clients/dapp/src/lib/: tracing.ts
docs/: ARCHITECTURE.md  OPERATIONAL_RUNBOOK.md  SECURITY.md  TESTING_FRAMEWORK.md  solana-tax-reward-project-specs.md  solana_tax_reward_implementation_plan.md
docs/monitoring/: alertmanager.yml  prometheus.yml
programs/tax_reward/: Anchor.toml  Cargo.toml
programs/tax_reward/src/: entrypoint.rs  error.rs  instructions.rs  lib.rs  processor.rs  state.rs  swap.rs  utils.rs
programs/tax_reward/tests/: integration_tests.rs
scripts/benchmark/: compute_bench.sh
scripts/deploy/: deploy.sh
scripts/maintenance/: monitoring.sh
src/: error.rs  instructions.rs  lib.rs  state.rs  swap.rs  utils.rs
tests/: anchor_tests.rs  e2e_tests.rs  integration_tests.rs  property_tests.rs  test_utils.rs  unit_tests.rs
