[package]
name = "solana_tax_reward"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.14.17"
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
thiserror = "1.0"
borsh = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "lib"]